Fixed some alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -319,7 +319,7 @@ nav {
     width:80%;
     flex-direction: column;
     align-items: center;
-    margin-top: 92vh;
+    margin-top: 96vh;
   }
 
   .content-container {
